CMP is no longer region locked. fixes cutoff on 1024 viewports. refactors productdetails.jsx. adds dropdown for item details and fabric care details. creates README for github.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,11 @@
     transform: translateX(100%);
   }
 }
+
+html {
+  scrollbar-gutter: stable;
+}
+
 .animate-shimmer {
   animation: shimmer 1.5s infinite;
 }
